2004-08-27  Juergen Reuter   <reuter@ipd.uka.de>

	* Documentation/user/lilypond-book.itely: fix parse error: @LaTeX
	-> La@TeX

2004-08-26  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/examples.itely: second, third, fourth, and fifth sections added.

	* input/template/{various}: removed files included in examples.itely.

2004-08-26  Juergen Reuter   <reuter@ipd.uka.de>

	* lily/stem.cc: bugfix: adjust-if-on-staffline: use
	Stem::stem_end_position instead of broken
	Staff_symbol_referencer::get_position

2004-08-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* debian/changelog: debian patch by Anthony Fok.

	* lily/stem.cc (flag): bugfix for mensural flags (thanks Juergen!)

	* lily/slur-engraver.cc (try_music): ignore slurs_. Otherwise we
	get spurious messages with skipTypesetting on.

2004-08-25  Graham Percival   <gperlist@shaw.ca>

	* Documentation/user/lilypond-book.itely: slight clean-up.

	* Documentation/user/examples.itely: began section.

2004-08-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/script-interface.cc: add slur property.

	* lily/slur-quanting.cc (score_extra_encompass): avoid other slurs
	too.

	* input/regression/phrasing-slur-slur-avoid.ly: new file.

	* lily/ottava-bracket.cc (print): always start from right edge of
	a broken bound. This fixes ottava-clef.ps 

2004-08-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/slur-script-inside.ly: new file.

	* lily/new-slur.cc (outside_slur_callback): new function, to make
	scripts avoid slurs 

	* lily/slur-engraver.cc (finalize): 

	* lily/script-interface.cc: add inside-slur property.

	* lily/slur-engraver.cc (finalize): read inside-slur property.

	* scm/lily.scm (postscript->png): use ~a iso. ~s in progress
	message.

	* ly/property-init.ly (unHideNotes): hide accidentals at staff
	level. Fixes: hideNotes-accidental.ly

2004-08-23  Pedro Kroger  <kroeger@pedrokroeger.net>

	* scm/page-layout.scm (plain-header): fix bug that print page